
[TestGenerate_ProductionTenant - 1]
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- limitrange.yaml
- namespace.yaml
- networkpolicy.yaml
- resourcequota.yaml
- rolebinding.yaml
- serviceaccount.yaml

---

[TestGenerateRBACManifests_ServiceAccountHardening - 1]
apiVersion: v1
automountServiceAccountToken: false
imagePullSecrets:
- name: ghcr-auth
- name: dockerhub
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-alpha
  namespace: team-alpha

---

[TestGenerateRBACManifests_MultipleClusterRoles - 1]
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-alpha-edit
  namespace: team-alpha
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
subjects:
- kind: ServiceAccount
  name: team-alpha
  namespace: team-alpha
/-/-/-/
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-alpha-view
  namespace: team-alpha
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: view
subjects:
- kind: ServiceAccount
  name: team-alpha
  namespace: team-alpha

---

[TestGenerateRBACManifests_PodSecurityLabels - 1]
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
  name: team-alpha

---
